# tutorial-pybr

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  esquema.py  excecao.py  magalu_api.py
apis-simuladas/: main.py  pyproject.toml
tests/: test_api.py
