[tool.poetry]
name = "tutorial-pybr"
version = "0.1.0"
description = ""
authors = ["Guilherme Macena <macenaguilherme1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.70.0"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line_length = 79